--- a/css/Body-header-footer.css
+++ b/css/Body-header-footer.css
@@ -1,7 +1,12 @@
+html {
+    height: 100%;
+}
+
 body {
     width: 100%;
     height: 100%;
     margin: 0;
+    padding: 0;
     background-attachment: fixed;
     background-image: url("../assets/vincentiu-solomon-ln5drpv_ImI-unsplash.jpg");
     background-repeat: no-repeat;
@@ -12,7 +17,6 @@ body {
     justify-content: center;
     align-items: center;
     align-content: center;
-    
 }
 
 header {
@@ -20,11 +24,10 @@ header {
     height: 5em;
 }
 
-
-
 section {
     width: 100%;
-    padding: 2em;
+    height: 100%;
+    padding: 1em;
 }
 
 .main {
@@ -36,6 +39,30 @@ section {
     justify-content: center;
     align-items: center;
     align-content: center;
-
 }
 
+footer {
+    width: 100%;
+    height: 3em;
+    margin: 0;
+    padding: 0;
+    bottom: 0;
+    background-color: black;
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+}
+
+footer a {
+    margin: 0;
+    font-size: small;
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: white;
+}
