removed text decoration from card a tags and added hover effect

--- a/css/Cards.css
+++ b/css/Cards.css
@@ -9,6 +9,15 @@
     border: 1px solid white;
 }
 
+.card a {
+    text-decoration: none;
+    color: #a35364;
+}
+
+.card a:hover {
+    color: black;
+}
+
 .card h1 {
     font-family: 'Montserrat Subrayada', sans-serif;
     color: black;
