added padding to card 1

--- a/css/Cards.css
+++ b/css/Cards.css
@@ -34,6 +34,7 @@
     background-position: center;
     background-color: #835983;
     border: 1px solid white;
+    padding-bottom: 2em;
 }
 
 #card-one-img {
